--- a/index.html
+++ b/index.html
@@ -32,6 +32,39 @@
       .animate-bounce-in {
         animation: bounce-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
       }
+       @keyframes sparkle {
+          0% { transform: scale(0) rotate(0deg); opacity: 1; }
+          80% { transform: scale(1.5) rotate(180deg); opacity: 1; }
+          100% { transform: scale(2) rotate(270deg); opacity: 0; }
+      }
+      .sparkle {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background: gold;
+        clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+        animation: sparkle 0.7s ease-out forwards;
+      }
+      .reward-particle {
+          position: fixed;
+          z-index: 1000;
+          border-radius: 50%;
+          pointer-events: none;
+          animation-name: converge-and-fade;
+          animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+          animation-fill-mode: forwards;
+      }
+
+      @keyframes converge-and-fade {
+          0% {
+              transform: translate(0, 0) scale(1);
+              opacity: 1;
+          }
+          100% {
+              transform: translate(var(--tx, 0), var(--ty, 0)) scale(0);
+              opacity: 0;
+          }
+      }
     </style>
   <script type="importmap">
 {
